--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           git fetch --all
           git branch -r | grep -v '\->' | grep 'upstream/' | sed 's/upstream\///' > branches.txt
-          echo "::set-output name=branches::$(cat branches.txt | tr '\n' ' ')"
+          echo "branches=$(cat branches.txt | tr '\n' ' ')" >> $GITHUB_OUTPUT
 
       - name: Add upstream repository
         run: |
