--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -2,7 +2,7 @@ name: Backup Fork
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天午夜運行一次
+    - cron: '0 0 * * 0'  # 每週日午夜運行一次
   workflow_dispatch:  # 允許手動觸發
 
 jobs:
