--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -2,8 +2,12 @@ name: Backup Fork and Sync
 
 on:
   schedule:
-    - cron: '0 0 * * 0'
-  workflow_dispatch:
+    - cron: '0 0 * * 0'  # 每週日午夜執行
+  workflow_dispatch:  # 允許手動觸發
+
+env:
+  UPSTREAM_REPO: ${{ vars.UPSTREAM_REPO || 'https://github.com/Gourieff/sd-webui-reactor.git' }}
+  MAIN_BRANCH: ${{ vars.MAIN_BRANCH || 'master' }}
 
 jobs:
   backup-and-sync:
@@ -16,16 +20,22 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN }}
 
       - name: Configure Git
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
+      - name: Tag current state
+        run: |
+          TIMESTAMP=$(date +"%Y%m%d%H%M%S")
+          git tag -a "pre-sync-$TIMESTAMP" -m "Pre-sync state on $TIMESTAMP"
+          git push origin "pre-sync-$TIMESTAMP"
+
       - name: Add upstream repository
         run: |
-          git remote add upstream https://github.com/Gourieff/sd-webui-reactor.git || git remote set-url upstream https://github.com/Gourieff/sd-webui-reactor.git
+          git remote add upstream ${{ env.UPSTREAM_REPO }} || git remote set-url upstream ${{ env.UPSTREAM_REPO }}
           git fetch --all --tags
 
       - name: Sync and handle conflicts
@@ -38,52 +48,32 @@ jobs:
             if git ls-remote --exit-code --heads upstream $branch > /dev/null 2>&1; then
               git checkout -B $branch origin/$branch
               
+              echo "Changes in upstream $branch:"
+              git log --oneline $branch..upstream/$branch
+              
               if git merge upstream/$branch --no-edit --allow-unrelated-histories; then
                 echo "Successfully merged changes for $branch"
-                git push origin $branch
               else
-                echo "Merge conflict in $branch. Attempting automatic resolution..."
-                
-                # 儲存衝突的文件列表
-                conflict_files=$(git diff --name-only --diff-filter=U)
-                
-                # 回退到合併前的狀態
+                echo "Merge conflict in $branch. Creating a new branch with upstream changes."
                 git merge --abort
-                
-                # 再次嘗試合併，這次使用 -X theirs 策略
-                if git merge upstream/$branch -X theirs --allow-unrelated-histories; then
-                  echo "Automatically resolved conflicts for $branch using upstream changes"
-                  git push origin $branch
-                else
-                  echo "Could not automatically resolve conflicts for $branch"
-                  
-                  # 創建一個新的分支來存儲上游更改
-                  conflict_branch="${branch}-upstream-changes"
-                  git checkout -b $conflict_branch upstream/$branch
-                  
-                  echo "Created new branch $conflict_branch with upstream changes"
-                  git push origin $conflict_branch
-                  
-                  echo "Please manually resolve conflicts between $branch and $conflict_branch"
-                fi
+                conflict_branch="${branch}-upstream-changes"
+                git checkout -b $conflict_branch upstream/$branch
+                echo "Created new branch $conflict_branch with upstream changes"
+                git push origin $conflict_branch
+                echo "Please manually review and merge changes from $conflict_branch into $branch"
+                git checkout $branch
               fi
+              git push origin $branch || echo "Failed to push $branch, please check and push manually if needed"
             else
               echo "Branch $branch does not exist in upstream. Skipping."
             fi
           done
 
-      - name: Create version tag
+      - name: Create post-sync version tag
         run: |
           TIMESTAMP=$(date +"%Y%m%d%H%M%S")
-          git tag -a "sync-$TIMESTAMP" -m "Sync on $TIMESTAMP"
-
-      - name: Push tags
-        run: |
-          if git push --tags origin; then
-            echo "Successfully pushed tags"
-          else
-            echo "Failed to push tags. This is non-critical, continuing workflow."
-          fi
+          git tag -a "post-sync-$TIMESTAMP" -m "Post-sync state on $TIMESTAMP"
+          git push origin "post-sync-$TIMESTAMP"
 
       - name: Generate sync report
         if: always()
@@ -94,7 +84,7 @@ jobs:
           git branch -r | grep 'origin/' | grep -v 'origin/HEAD' | sed 's/origin\///' | while read branch; do
             echo "## Branch: $branch" >> sync_report.md
             if git log HEAD..origin/$branch --oneline | grep -q .; then
-              echo "Status: Changes pushed" >> sync_report.md
+              echo "Status: Changes synced" >> sync_report.md
               echo "Changes:" >> sync_report.md
               git log HEAD..origin/$branch --oneline >> sync_report.md
             else
